# ebsdlab

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  environment.yml  releaseVersion.py  requirements-dev.txt  requirements-devel.txt  requirements.txt  requiremnets.txt  setup.cfg  setup.py
.github/workflows/: docbuild.yml  pypi.yml
docs/: Makefile  dir_32cce02d098f3570fce83b16a62e12ff.html  dir_49e56c817e5e54854c35e136979f97ca.html  doxygen_crawl.html  ebsd.ang  ebsd_8doxy.html  ebsd__Orientation_8doxy.html  ebsd__Symmetry_8doxy.html  files.html  index.html  main.html  main__doc_8doxy.html  menudata.js  namespaces.html  namespacesetup.html  namespaceverifyAll.html  pages.html  setup_8py.html  verifyAll_8py.html
docs/docs/: dir_49e56c817e5e54854c35e136979f97ca.html  doxygen_crawl.html  ebsd_8doxy.html  ebsd__Orientation_8doxy.html  ebsd__Symmetry_8doxy.html  files.html  index.html  main.html  main__doc_8doxy.html  menudata.js  namespaces.html  namespaceverifyAll.html  pages.html  verifyAll_8py.html
docs/source/: api.rst  conf.py  ebsd.rst  ebsd_Orientation.doctest  index.rst  installation.rst  main_doc.doctest  orientation.rst  orientation1.rst  symmetry.rst  verification.rst
docs/source/_static/: custom.css  stereographicProjection.fig  stereographicProjection.fig.bak
ebsdlab/: ebsd.py  orientation.py  rodrigues.py  symmetry.py
src/py_ebsd/: __init__.py  ebsd.py  ebsd_Orientation.py  ebsd_Rodrigues.py  ebsd_Symmetry.py
tests/: Readme.md  _verify.py  test_ebsd.py  test_symmetry.py  verify.py
tests/DataFiles/: EBSD.ang
