[metadata]
url = https://github.com/micromechanics/ebsdlab.git
author = Steffen Brinckmann, Alexander Hartmaier
author_email = sbrinckm@gmail.com
description = The EBSD Lab for Python
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_files =
    LICENSE
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.10
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
install_requires =
    pillow
    numpy
    scipy
    matplotlib
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = ebsdlab*

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
# - only for information: not used to create the devel requirements file
devel =
    sphinx
    jupyter_sphinx
    sphinx_tabs
    pytest
    pytest-mpl
    isort
    mypy
    pylint
    pre-commit
    requests
    pip-tools

[options.entry_points]
# install the GUI starter as direct entrypoints
# overhead

[coverage:report]
show_missing = True
# omit =
#    # versioneer code

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[isort]
line_length = 120
lines_between_sections = 0
